# collections-transformer

./: .dockerignore  .env.docker.template  .env.local.template  .env.template  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  run_app.sh
.github/workflows/: client-typecheck.yml  server-quality.yml
assets/: README.md  test_csv_1.csv  test_csv_2.csv  test_txt_1.txt
assets/embedding/: test_embed.txt
bruno/: README.md  bruno.json  collection.bru
bruno/01 Health/: Health.bru  Readiness.bru
bruno/02 Transforms/: Create Transform.bru  Get Transform Status.bru
bruno/03 User/: Get Last Connection.bru  Get User Preferences.bru  Get User Profile.bru  Record Connection.bru  Save User Preferences.bru  (+1 more)
client/: .env.local.template  package-lock.json  package.json  tsconfig.json
diagrams/: README.md  diagram1.drawio
docker/: Caddyfile  Dockerfile.client  Dockerfile.server  docker-compose.yml
docs/: issue-13-caddy-reverse-proxy.md  issue-14-api-convergence-plan.md  issue-15-http-response-model.md  issue-7-refactor-plan.md  issue-9-typescript-migration-plan.md
scripts/: build_seed_archive_from_sqlite.sh  create_mongo_seed_archive.sh  create_server_env.sh  ensure_mongodb.sh  export_sqlite_to_json.py  import_sqlite_images_to_mongo.py  merge_backup_images.py  migrate_db.sh  migrate_sqlite_to_mongodb.py  relink_item_images_from_gridfs.py  restore_local_seed_data.sh  restore_mongo_seed.sh  run_client.sh  run_server.sh  run_server_prod.sh  start_platform.sh
server/: .env.template  app.py  config.py  requirements.txt
tests/: README.md
(+198 files in other folders)
