[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server/**", "README.md", "requirements.txt"]

[project]
name = "collections-transformer"
version = "0.1.0"
description = "Agent-based platform for multimodal LLM analysis of datasets in the GLAM sector"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.6",
  "black>=24.10.0",
  "isort>=5.13.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  "server/api/routes/*.py",
  "server/api/models/*.py",
  "server/db/**",
  "server/wandb/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
